add required dependencies

--- a/source/Mercury.PowerShell.Hooks/Mercury.PowerShell.Hooks.csproj
+++ b/source/Mercury.PowerShell.Hooks/Mercury.PowerShell.Hooks.csproj
@@ -33,4 +33,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Management.Automation" Version="7.4.5" />
+  </ItemGroup>
+
 </Project>
