move format xml file

--- a/source/Mercury.PowerShell.Hooks/Mercury.PowerShell.Hooks.csproj
+++ b/source/Mercury.PowerShell.Hooks/Mercury.PowerShell.Hooks.csproj
@@ -31,7 +31,7 @@
     <None Update="Mercury.PowerShell.Hooks.psd1">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Formats\HookStore.format.ps1xml">
+    <None Update="Mercury.PowerShell.Hooks.Format.ps1xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
