add namespace on global usings

--- a/source/Mercury.PowerShell.Hooks/Mercury.PowerShell.Hooks.csproj
+++ b/source/Mercury.PowerShell.Hooks/Mercury.PowerShell.Hooks.csproj
@@ -23,6 +23,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Using Include="System.Management.Automation"/>
+    <Using Include=" System.Management.Automation.Language"/>
+
     <InternalsVisibleTo Include="$(AssemblyName).UnitTests"/>
     <InternalsVisibleTo Include="$(AssemblyName).E2ETests"/>
   </ItemGroup>
