add testing project

--- a/source/Mercury.PowerShell.Hooks/Mercury.PowerShell.Hooks.csproj
+++ b/source/Mercury.PowerShell.Hooks/Mercury.PowerShell.Hooks.csproj
@@ -26,8 +26,7 @@
     <Using Include="System.Management.Automation"/>
     <Using Include="System.Management.Automation.Language"/>
 
-    <InternalsVisibleTo Include="$(AssemblyName).UnitTests"/>
-    <InternalsVisibleTo Include="$(AssemblyName).E2ETests"/>
+    <InternalsVisibleTo Include="$(AssemblyName).Testing"/>
   </ItemGroup>
 
   <ItemGroup>
