add global using

--- a/testing/Mercury.PowerShell.Hooks.Testing/Mercury.PowerShell.Hooks.Testing.csproj
+++ b/testing/Mercury.PowerShell.Hooks.Testing/Mercury.PowerShell.Hooks.Testing.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <Using Include="NUnit.Framework"/>
+    <Using Include="Mercury.PowerShell.Hooks.Testing.Tools"/>
   </ItemGroup>
 
   <ItemGroup>
