--- a/source/Mercury.PowerShell.Hooks/Mercury.PowerShell.Hooks.csproj
+++ b/source/Mercury.PowerShell.Hooks/Mercury.PowerShell.Hooks.csproj
@@ -7,6 +7,21 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <CodeAnalysisTreatWarningsAsErrors>true</CodeAnalysisTreatWarningsAsErrors>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Label="Package">
+    <Authors>Bruno Sales</Authors>
+    <Description>Hook functionality for PowerShell 7.</Description>
+    <Copyright>Copyright (c) 2024 Bruno Sales &lt;me@baliestri.dev&gt;</Copyright>
+    <Company>baliestri</Company>
+    <PackageId>Mercury.PowerShell.Hooks</PackageId>
+    <PackageProjectUrl>https://github.com/mercury-powershell/hooks</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
+    <RepositoryUrl>https://github.com/mercury-powershell/hooks.git</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>powershell;hooks;mercury</PackageTags>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)'=='Debug'">
