move build conditions to props file

--- a/source/Mercury.PowerShell.Hooks/Mercury.PowerShell.Hooks.csproj
+++ b/source/Mercury.PowerShell.Hooks/Mercury.PowerShell.Hooks.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="$(ProjectDir)Mercury.Targets.props"/>
+  <Import Project="$(ProjectDir)Mercury.Configuration.props"/>
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -9,7 +10,6 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <CodeAnalysisTreatWarningsAsErrors>true</CodeAnalysisTreatWarningsAsErrors>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Label="Package">
@@ -24,19 +24,6 @@
     <RepositoryUrl>https://github.com/mercury-powershell/hooks.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>powershell;hooks;mercury</PackageTags>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)'=='Debug'">
-    <DebugType>full</DebugType>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)'=='Release'">
-    <DebugSymbols>false</DebugSymbols>
-    <DebugType>none</DebugType>
-    <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
-    <Optimize>true</Optimize>
-    <PublishReadyToRun>true</PublishReadyToRun>
-    <PublishReadyToRunEmitSymbols>true</PublishReadyToRunEmitSymbols>
   </PropertyGroup>
 
   <ItemGroup>
